# didcomm-python

./: .flake8  .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/scripts/: current_version.py
.github/workflows/: codestyle.yml  release.yml  tests.yml  verify.yml
didcomm/: __init__.py  errors.py  forward.py  helper.py  message.py  pack.py  pack_encrypted.py  pack_plaintext.py  pack_signed.py  plaintext.py  types.py  unpack.py
didcomm/common/: algorithms.py  resolvers.py  types.py  utils.py
didcomm/core/: __init__.py  anoncrypt.py  authcrypt.py  converters.py  defaults.py  from_prior.py  serialization.py  sign.py  types.py  utils.py  validation.py  validators.py
didcomm/core/keys/: anoncrypt_keys_selector.py  authcrypt_keys_selector.py  forward_next_keys_selector.py  (+1 more)
didcomm/did_doc/: did_doc.py  did_resolver.py  did_resolver_in_memory.py
didcomm/interfaces/: did_doc.py  did_resolver.py  secrets_resolver.py
didcomm/secrets/: secrets_resolver.py  secrets_resolver_demo.py  secrets_resolver_editable.py  secrets_resolver_in_memory.py  secrets_util.py
didcomm/types/: algorithms.py  attachment.py  from_prior.py  message.py  mtc.py  plaintext.py  types.py  unpack_opt.py  unpack_result.py
docs/: release.md  testing.md
tests/: __init__.py  conftest.py  demo.py  test_demo.py  test_demo_forward.py  test_pack_unpack.py
tests/common/: example_resolvers.py  interfaces_test.py  test_resolvers.py
tests/demo/: test_demo.py  test_demo_advanced_params.py  test_demo_attachments.py  test_demo_forward.py  test_demo_mediators.py  test_demo_rotate_keys.py
tests/integration/: test_pack_unpack.py
tests/performance/: test_performance.py
tests/test_vectors/: common.py  mock_did_resolver.py  mock_secrets_resolver_alice.py  mock_secrets_resolver_bob.py  mock_secrets_resolver_charlie.py  mock_secrets_resolver_mediator_1.py  mock_secrets_resolver_mediator_2.py  test_utils.py  test_vectors_anon_encrypted.py  test_vectors_auth_encrypted.py  test_vectors_common.py  test_vectors_plaintext.py  test_vectors_signed.py  utils.py
tests/unit/: common.py  conftest.py  test_pack_unpack.py  test_pack_unpack_anon_crypt.py  test_pack_unpack_auth_crypt.py  test_pack_unpack_signed.py
(+84 files in other folders)
