[metadata]
name = didcomm
version = attr: didcomm.__version__
url = https://github.com/sicpa-dlab/didcomm-python
project_urls =
    #    Documentation =
    Source Code = https://github.com/sicpa-dlab/didcomm-python
    Issue Tracker = https://github.com/sicpa-dlab/didcomm-python/issues/
license = Apache-2.0
author = SICPA
author_email = DLCHOpenSourceContrib@sicpa.com
# maintainer =
# maintainer_email =
description = DIDComm for Python
long_description = file: README.md
long_description_content_type = text/markdown
# TODO
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    # Topic ::
    # Development Status ::

[options]
packages = find:
include_package_data = true
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
exclude =
    tests
    tests.*
    docs

[flake8]
# set the same as 'black' uses
max-line-length = 88
